# FlexCANFlasher

./: .gitignore  README.md  diagram.json  example.config.json  firmware_server.py  mqtt_server.py  requirements.txt  wokwi.toml
BlinkFirmware/ESP/: CMakeLists.txt  partitions.csv
BlinkFirmware/ESP/main/: CanReceiver.h  blink_example_main.c  blink_example_main.cpp
Helper/: ConfigLoader.py  MQTTConfig.py  ProjectConfig.py  ServerConfig.py
OTA_Firmware/: CMakeLists.txt  partitions.csv
OTA_Firmware/CanReceiver/ESP/: CMakeLists.txt  partitions.csv
OTA_Firmware/CanReceiver/ESP/main/: main.cpp
OTA_Firmware/main/: CANFlashBuilder.h  CMakeLists.txt  ConfigBuilder.h  JSON_Parser.h  MQTTConnectionBuilder.h  OTAConnectionBuilder.h  WifiConnectionBuilder.h  idf_component.yml  main.cpp
OTA_Firmware_tests/: CMakeLists.txt
OTA_Firmware_tests/main/: CMakeLists.txt  ConfigBuilderTest.h  JSON_Parser_tests.h  idf_component.yml  main.cpp
scripts/: create_certs.sh  kill_firmware_server.sh  setup_py_venv.sh  start_tests.sh
